--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>StudyNotion by Nayankumar Shetty</title>
+  <title>StudyNotion by Sushant Swarup</title>
   <link rel="shortcut icon" href="./Logo-Small-Light.png" type="image/x-icon">
 </head>
 
